--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,4 +66,12 @@
         android:layout_marginTop="16dp"
         android:onClick="abrirToast"/>
 
+    <Button
+        android:id="@+id/btToast"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Abrir AlertDialog"
+        android:layout_marginTop="16dp"
+        android:onClick="abrirAlertDialog"/>
+
 </LinearLayout>
