--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="16dp"
@@ -59,7 +63,6 @@
         android:gravity="center_horizontal"/>
 
     <Button
-        android:id="@+id/btToast"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Abrir Toast"
@@ -67,11 +70,31 @@
         android:onClick="abrirToast"/>
 
     <Button
-        android:id="@+id/btToast"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Abrir AlertDialog"
         android:layout_marginTop="16dp"
         android:onClick="abrirAlertDialog"/>
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:max="100"
+        android:layout_marginTop="16dp"/>
+
+    <ProgressBar
+        android:id="@+id/progressBarCarregando"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Carregar"
+        android:onClick="carregar"
+        />
+
 </LinearLayout>
+</ScrollView>
